--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,46 @@
-name: Generate Gemfile.lock
+name: Deploy Keystone Site to GitHub Pages
 
 on:
   push:
     branches: ["main"]
+  workflow_dispatch:
 
-# ADD THIS BLOCK TO GRANT WRITE PERMISSIONS
 permissions:
-  contents: write
+  contents: read # Set permissions back to read-only for security
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  generate-lockfile:
+  build:
     runs-on: ubuntu-latest
     steps:
-      # 1. Check out the repository
       - name: Checkout
         uses: actions/checkout@v4
-
-      # 2. Set up Ruby and create the Gemfile.lock
-      - name: Setup Ruby and Bundle Install
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
-          bundler-cache: true
-
-      # 3. Commit the new Gemfile.lock back to the repository
-      #    This step will now have permission to work.
-      - name: Commit Gemfile.lock
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "feat: Add generated Gemfile.lock"
-          file_pattern: Gemfile.lock
+          bundler-cache: true # This will now use your Gemfile.lock
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
+      - name: Build with Jekyll
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: production
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
