--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,4 +1,4 @@
-- quote: "Keystone's ability to seamlessly integrate our hardware with a scalable cloud backend was a game-changer. Their expertise is unmatched."
+- quote: "CircuitX's ability to seamlessly integrate our hardware with a scalable cloud backend was a game-changer. Their expertise is unmatched."
   author: "Jane Doe"
   title: "CEO, Tech Innovators Inc."
 
