--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # _config.yml
 title: CircuitX Systems
 description: "The Foundation for Your Innovation. We engineer robust, end-to-end solutions, seamlessly fusing hardware and software."
-author: Keystone Systems
-url: "https://circuitx-systems.github.io" # IMPORTANT: Replace with your GitHub Pages URL
+author: CircuitX Systems
+url: "https://Circuitx-Systems.github.io" # IMPORTANT: Replace with your GitHub Pages URL
 
 # Build settings
 theme: null # We are using a custom theme, so we disable the default.
@@ -16,5 +16,3 @@ defaults:
       path: "" # An empty string here means all files in the project.
     values:
       layout: "default"
-
-
